manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-project
  template:
    metadata:
      labels:
        app: kubernetes-project
    spec:
      containers:
        - name: kubernetes-project
          image: lapalmerjack/kubernetes-project:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
