manifests/rollout-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause:
            duration: 30s
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-usage
        - pause:
            duration: 30s
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: BACKEND/IMAGE
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 50
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    cloud.google.com/backend-config: '{"default" :"healthcheck"}'
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
