manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  type: ClusterIP
  selector:
    app: kubernetes-project
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 8080
