manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-project-ingress
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 2345
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 2345
          - path: /getToDos
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 2345
          - path: /add
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 2345
          - path: /frontend-health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 2345
